[package]
name = "typstudio"
version = "0.1.0"
description = "A Tauri App"
authors = ["Cubxity"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Cubxity/typstudio"
default-run = "typstudio"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
anyhow = "1.0"
thiserror = "1.0"
enumset = { version = "1.0", features = ["serde"] }
siphasher = "0.3"
once_cell = "1.17"
elsa = "1.8"
hex = "0.4"
base64 = "0.21"

typst = { git = "https://github.com/typst/typst", branch = "main" }
typst-library = { git = "https://github.com/typst/typst", branch = "main" }
comemo = "0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
