[package]
name = "typstudio"
version = "0.1.0"
description = "A Tauri App"
authors = ["Cubxity"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Cubxity/typstudio"
default-run = "typstudio"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tauri = { version = "1.6", features = ["devtools", "dialog-all"] }
anyhow = "1.0"
thiserror = "1.0"
enumset = { version = "1.1", features = ["serde"] }
siphasher = "1.0"
once_cell = "1.19"
elsa = "1.10"
hex = "0.4"
base64 = "0.22"
notify = "6.1"
arboard = "3.3"
chrono = "0.4"
png = "0.17"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
walkdir = "2.5"
memmap2 = "0.9"

typst = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
typst-ide = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
typst-pdf = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
typst-render = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
comemo = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "embed-fonts"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
embed-fonts = []
